# CMakeTemplates

cmake_template_library/: CMakeLists.txt  config.h.in  hello.cpp
cmake_template_library/myhello/: CMakeLists.txt  myhello.cpp  myhello.h
cmake_template_simple/: CMakeLists.txt  hello.cpp
